2003-10-29  Per Bothner  <per@bothner.com>

	* cpphash.h (struct cpp_fragment):  Fields start_line and end_line
	are fileline instances.

2003-10-18  Per Bothner  <per@bothner.com>

	* c-lex.c (src_line):   Remove unneeded static variable.
	(cb_line_change):  Set input_line directly, instead of src_line.
	(get_non_padding_token):  We no longer need to compensate for the
	"horrible things" the C++ front-end does with the current line number,

	* cppinit.c (cpp_read_main_file):  Split into two functions:
	Distribute _cpp_stack_file call over the two functions.
	(cpp_find_main_file):  New function.
	Don't call _cpp_do_file_change even if working_directory flag set.
	(cpp_push_main_file):  New function.
	* cppfiles.c (_cpp_find_failed):  New helper function.
	(find_file):  Made non-static and renamed to _cpp_find_file.
	(_cpp_stack_file):  No longer needed.  But note the following.
	(stack_file):  Made non-static and renamed to _cpp_stack_file.
	(search_path_head):  If there is no current buffer, use main_file.
	* fix-header.c (cpp_read_main_file):  Replace cpp_read_main_file
	call with calls to cpp_find_main_file and cpp_push_main_file.
	* cpphash.h:  Update function declarations.
	* cpplib.h:  Update function declarations.

	* c-opts.c (c_common_post_options):  Don't call cpp_find_main_file yet.
	(push_command_line_include):  When done with options, pass LC_LEAVE
	instead of LC_RENAME to cpp_change_file and finally cpp_push_main_file.
	(c_common_post_options):  Move finish_options call to here.
	(finish_options):  Take file name parameter, as in mainline.
	Don't do cpp cpp processing for "<built-in>" here.
	(init_c_common_once):  Don't call finish_options here, but do inline
	cpp processing for "<built-in>".
	Don't register_cpp_callbacks if flag_preprocess_only.
	(fe_file_change):  Handle NULL new_map, and simplify.
	* cpplex.c (_cpp_get_fresh_line):  Revert my no-longer-needed
	08-28 change, since we're never called with a NULL buffer.
	(_cpp_lex_direct):  Likewise.